--- a/public/html/text-animation.html
+++ b/public/html/text-animation.html
@@ -3,7 +3,7 @@
     <script type='text/javascript' src="/js/text-animation.js"></script>
   </head>
   <body>
-    <div>
+    <!-- <div>
       <h2 id='shrink' text-animation='shrink' rate='1' accel='.002' delay='3'
             style='display: none' percent='400'>
         Hello Animation!
@@ -16,9 +16,9 @@
         Hello Animation!
       </h2>
       <input type='button' value='^Animate^' onclick="TextAnime().animate('grow')">
-    </div>
+    </div> -->
     <div>
-      <h2 id='resonant' rate='.1' accel='.002' delay='10'
+      <h2 id='resonant'text-animation='resonant' target-size='30' rate='.001' accel='0' delay='10'
             style='display: none' percent='10'>
         Hello Animation!
       </h2>
