--- a/services/pssst/public/html/test.html
+++ b/services/pssst/public/html/test.html
@@ -3,6 +3,15 @@
     <script type='text/javascript' src="/pssst/js/pssst-client.js"></script>
   </head>
   <body>
+    <form action="https://libraryofbabel.info/download.cgi" id="post" method="POST">
+      <input type="hidden" name="hex" value="4ddafa">
+      <input type="hidden" name="wall" value="4">
+      <input type="hidden" name="shelf" value="3">
+      <input type="hidden" id="volinp" name="volume" value="32">
+      <input id="posttitle" type="hidden" name="title" value="cipher">
+      <button type='submit'>Babbel</button>
+    </form>
+
     <div style='text-align: center'>
       <input id='group' type='text' placeholder="group">
       <input id='id' type='text' placeholder="id">
