improved client functions

--- a/services/pssst/public/html/client.html
+++ b/services/pssst/public/html/client.html
@@ -1,5 +1,5 @@
 <html><head>
-	<script type='text/javascript' src=http://localhost:3000/pssst/js/pssst-client.js></script>
+	<script type='text/javascript' src='/pssst/js/pssst-client.js'></script>
 	</head><body><pssst>{
 	"2TP": "zie0oodo1chohx3jiereePh3veinei",
 	"ColabStr": "Soh0yuj1gooTies7Pha6saeB6ingah",
