removed tab logic from multiline json functions

--- a/services/video-directory/public/html/test.html
+++ b/services/video-directory/public/html/test.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Sample code for syntaxhighlighter usage</title>
-        <script type="text/javascript" src="/js/multi-line-str.js"></script>
+        <script type="text/javascript" src="https://www.jozsefmorrissey.com/js/std-lib-utils.js"></script>
     </head>
 
     <body>
@@ -14,7 +14,7 @@
               continued": "
                   Line one
                   Line 2
-                  line III
+                  line III\"
               "
             }
             </pre>
