fixed debug gui client test

--- a/services/debug-gui/public/html/debug-gui-client-test.html
+++ b/services/debug-gui/public/html/debug-gui-client-test.html
@@ -58,6 +58,6 @@
   </head>
   <body>
     <input type='button' onclick="randomAdd()" value='Generate'>
-    <debug-gui-data url='https://localhost:3001/debug-gui' dg-id='test'></debug-gui-data>
+    <debug-gui-data dg-id='test'></debug-gui-data>
   </body>
 </html>
