integrated debug-gui with pssst

--- a/public/html/exampleVid.html
+++ b/public/html/exampleVid.html
@@ -8,7 +8,7 @@
       [
         {"id": 0, "title": "one", "title-link": "http://www.google.com", "desc": "google"},
         {"id": 1, "title": "two", "title-link": "http://www.ebay.com", "desc": "ebay"},
-        {"id": 2, "title": "three", "title-link": "http://www.jozsefmorrissey.com", "desc": "mine"},
+        {"id": 2, "title": "three", "title-link": "http://node.jozsefmorrissey.com", "desc": "mine"},
         {"id": 3, "title": "four", "title-link": "http://www.amazon.com", "desc": "amazon"}
       ]
         </utility-filter>
