--- a/services/debug-gui/public/html/debug-gui-server.html
+++ b/services/debug-gui/public/html/debug-gui-server.html
@@ -1,6 +1,6 @@
 <html><head>
-    <script type='text/javascript' src="https://www.jozsefmorrissey.com/debug-gui/js/debug-gui.js"></script>
+    <script type='text/javascript' src="https://node.jozsefmorrissey.com/debug-gui/js/debug-gui.js"></script>
 </head>
 <body>
-  <debug-gui-data url='https://www.jozsefmorrissey.com/debug-gui/' dg-id='test'></debug-gui-data>
+  <debug-gui-data url='https://node.jozsefmorrissey.com/debug-gui/' dg-id='test'></debug-gui-data>
 </body></html>
