--- a/services/video-directory/public/html/concepts/todo/advanced.html
+++ b/services/video-directory/public/html/concepts/todo/advanced.html
@@ -156,11 +156,13 @@
             }]
           },{
             "id": "Object",
-            "description": "desc",
-            "form": "form",
+            "description": "Most high level languages are now object oriented.
+                            What this means is, the program can be sturctured
+                            in such a way that it is composed of isolated data
+                            structures with specific functionality.",
+            "form": "",
             "examples": [{
               "class": "",
-              "id": "",
               "code": ""
             },{
               "class": "",
