--- a/services/video-directory/public/html/test.html
+++ b/services/video-directory/public/html/test.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Sample code for syntaxhighlighter usage</title>
-        <script type="text/javascript" src="https://www.jozsefmorrissey.com/js/std-lib-utils.js"></script>
+        <script type="text/javascript" src="https://node.jozsefmorrissey.com/js/std-lib-utils.js"></script>
     </head>
 
     <body>
