removed all "unsafe" assignments to inner html

--- a/services/debug-gui/public/html/debug-gui-client-test.html
+++ b/services/debug-gui/public/html/debug-gui-client-test.html
@@ -1,10 +1,10 @@
 <html>
   <head>
+    <script type='text/javascript' src="/js/short-cut-container.js"></script>
     <script type='text/javascript' src="/debug-gui/js/debug-gui-client.js"
-        identity='id3'
         host='http://localhost:3000/debug-gui'
         debug='true';
-        window='23'></script>
+        log-window='23'></script>
     <script>
       function dgTest() {
         var dg = DebugGuiClient.browser();
