--- a/public/html/brylee.html
+++ b/public/html/brylee.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8">
     <title>Brylee</title>
     <script>
-      let xexpr, consts, sign, prefix, question, solution;
+      let xexpr, consts, sign, prefix, question, solution, count;
       let right = 0;
       let wrong = 0;
       function reset() {
         xexpr = Math.floor(Math.random() * 8) + 2
         consts = Math.floor(Math.random() * 8) + 2
-        sign = Math.floor(Math.random() * 1.5)
-        prefix = Math.floor(Math.random() * 1.5)
+        sign = Math.floor(Math.random() * 1.2)
+        prefix = Math.floor(Math.random() * 1.2)
         pol = Math.floor(Math.random() * 2)
       }
       function expr() {
@@ -34,6 +34,8 @@
       function calc() {
         reset();
         document.getElementById('a').value = '';
+        document.getElementById('ans').innerHTML = '';
+        count = 0;
         question = expr();
         solution = answer();
         display();
@@ -49,7 +51,13 @@
         if (ans === solution) {
           right++;
           calc();
-        } else wrong++;
+        } else {
+          wrong++;
+          count++;
+          if (count === 3) {
+              document.getElementById('ans').innerHTML = "Answer: " + answer();
+          }
+        }
         display();
       }
       window.onload = calc;
@@ -58,6 +66,7 @@
   <body>
     <h1>Brylee Sign Practice</h1>
     <h1 id='q'></h1>
+    <h1 id='ans'></h1>
     <h4 id='r'></h4>
     <h4 id='w'></h4>
     <h4 id='p'></h4>
