--- a/public/html/math.html
+++ b/public/html/math.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Brylee</title>
+    <title>Math Practice</title>
     <style media="screen">
       .menu {
         list-style: none;
