Finished planks estamate demo

--- a/public/html/planks-estimate.html
+++ b/public/html/planks-estimate.html
@@ -6,6 +6,7 @@
     <script type="text/javascript" src='/js/html-templates/planks.js'></script>
     <script type="text/javascript" src='/js/planks-estimate.js'></script>
     <link rel="stylesheet" href="/styles/expandable-list.css">
+    <link rel="stylesheet" href="/styles/planks.css">
     <title>Planks Exstamate</title>
   </head>
   <body>
