--- a/public/html/planks/expandable-list.html
+++ b/public/html/planks/expandable-list.html
@@ -1,19 +1,20 @@
 
-<div class="expandable-list" ex-list-id='{{id}}'>
+<div class="expandable-list {{type}}" ex-list-id='{{id}}'>
   <div:t repeat='item in list' class="expandable-list-body"  index='{{$index}}'>
     <div class="expand-item">
       <button class='expandable-item-rm-btn' ex-list-id='{{id}}' index='{{$index}}'>X</button>
-      <div class="expand-header">
+      <div class="expand-header {{type}}"  ex-list-id='{{id}}' index='{{$index}}'>
         {{getHeader(item, $index)}}
       </div>
-      <div class="expand-body">
+      <div class="expand-body {{type}}"  ex-list-id='{{id}}' index='{{$index}}'>
         {{getBody(item, $index)}}
       </div>
     </div>
   </div:t>
   <div>
-    <button ex-list-id='{{id}}' ex-list-id='{{id}}' class='expandable-list-add-btn'>
-      Add {{listType}}
+    <button ex-list-id='{{id}}' class='expandable-list-add-btn'
+          {{hideAddBtn ? 'hidden' : ''}}>
+      Add {{listElemLable}}
     </button>
   </div>
 </div>
