trying to wrap my head/planks-estamate around 3-d logic...tbp(to be perfected)

--- a/public/html/planks/cabinet-body.html
+++ b/public/html/planks/cabinet-body.html
@@ -1,4 +1,25 @@
 <div>
+  <div class='cabinet-header'>
+    <label>Reveal:</label>
+    <div class='cabinet-dem-cnt'>
+      <label>Top:</label>
+      <input class='cabinet-input dem' type='width' value='{{width}}'>
+      <label>Bottom:</label>
+      <input class='cabinet-input dem' type='height' value='{{height}}'>
+      <label>Left:</label>
+      <input class='cabinet-input dem' type='depth' value='{{depth}}'>
+      <label>Right:</label>
+      <input class='cabinet-input dem' type='depth' value='{{depth}}'>
+    </div>
+  </div>
+  <br>
+  <div class='cabinet-header'>
+    <label>Toe Kick Height:</label>
+    <div class='cabinet-dem-cnt'>
+      <input class='cabinet-input dem' type='width' value='{{width}}'>
+    </div>
+  </div>
+
   <div class='center'>
     <div class='left'>
       <label>Show Left</label>
