--- a/public/html/planks/sections/door.html
+++ b/public/html/planks/sections/door.html
@@ -1,6 +1,10 @@
-<h2>Door: {{list.activeIndex()}}</h2>
-
-<label><label>
-  <div class='section-feature-ctn'>
-    {{featureDisplay}}
-  </div>
+<h2>DoorSection({{list.activeIndex()}}):</h2>
+<br><br>
+<div>
+  <div:t class='inline' repeat='assem in assemblies'>
+    <h3>{{assem.objId}}</h3>
+    <div>
+      {{getFeatureDisplay(assem)}}
+    </div>
+  </div:t>
+</div>
