--- a/public/html/planks/sections/divider.html
+++ b/public/html/planks/sections/divider.html
@@ -1,4 +1,4 @@
-<h2>Panel: {{list.activeIndex()}}</h2>
+<h2>Divider: {{list.activeIndex()}}</h2>
 <div class='section-feature-ctn'>
   {{featureDisplay}}
 </div>
